--- a/templates/result.html
+++ b/templates/result.html
@@ -35,15 +35,15 @@
     <p><strong>Artist:</strong> {{ artist }}</p>
     <div>
         <h3>Album Art:</h3>
-        <img src="{{ album_art_url }}" alt="Album Art">
+        <img src="{{ url_for('download', file_type='album_art', spotify_url=spotify_url) }}" alt="Album Art">
         <br>
-        <a class="download-button" href="/download/album_art?spotify_url={{ request.args.get('spotify_url') }}" download>Download Album Art</a>
+        <a class="download-button" href="{{ url_for('download', file_type='album_art', spotify_url=spotify_url) }}" download>Download Album Art</a>
     </div>
     <div>
         <h3>Spotify Code:</h3>
-        <img src="{{ spotify_code_url }}" alt="Spotify Code">
+        <img src="{{ url_for('download', file_type='spotify_code', spotify_url=spotify_url) }}" alt="Spotify Code">
         <br>
-        <a class="download-button" href="/download/spotify_code?spotify_url={{ request.args.get('spotify_url') }}" download>Download Spotify Code</a>
+        <a class="download-button" href="{{ url_for('download', file_type='spotify_code', spotify_url=spotify_url) }}" download>Download Spotify Code</a>
     </div>
 </body>
 </html>
