--- a/templates/result.html
+++ b/templates/result.html
@@ -27,6 +27,19 @@
         .download-button:hover {
             background-color: #0056b3;
         }
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #6c757d;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .back-button:hover {
+            background-color: #5a6268;
+        }
     </style>
 </head>
 <body>
@@ -45,5 +58,7 @@
         <br>
         <a class="download-button" href="{{ url_for('download', file_type='spotify_code', spotify_url=spotify_url) }}" download>Download Spotify Code</a>
     </div>
+    <br>
+    <a class="back-button" href="{{ url_for('back') }}">Back</a>
 </body>
 </html>
