edit title for clarity

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <title>Spotify Track Info</title>
 </head>
 <body>
-    <h1>Enter Spotify Song Link</h1>
+    <h1>Enter Spotify Link (Song, Album, Playlist)</h1>
     <form action="/result" method="post">
-        <label for="spotify_url">Spotify URL:</label>
+        <label for="spotify_url">Paste URL Here:</label>
         <input type="text" id="spotify_url" name="spotify_url" required>
         <button type="submit">Get Info</button>
     </form>
