--- a/templates/result.html
+++ b/templates/result.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Download {{ link_type }} info including Album Art and Spotify Code for {{ title }} by {{ artist }}.">
+    <meta name="keywords" content="Spotify, {{ link_type }}, {{ title }}, {{ artist }}, Album Art, Spotify Code, Download">
     <title>{{ link_type }} Info</title>
     <style>
         body {
@@ -14,31 +16,33 @@
             max-width: 100%;
             height: auto;
         }
-        .download-button {
+        .download-button, .back-button {
             display: inline-block;
             padding: 10px 20px;
             margin: 10px;
             font-size: 16px;
             color: white;
-            background-color: #0056b3; /* Darker background color for better contrast */
             text-decoration: none;
             border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .download-button {
+            background-color: #0056b3;
         }
         .download-button:hover {
-            background-color: #003d7a; /* Even darker background color for hover */
+            background-color: #003d7a;
         }
         .back-button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #5a6268; /* Maintained color for the back button */
-            text-decoration: none;
-            border-radius: 5px;
+            background-color: #5a6268;
         }
         .back-button:hover {
-            background-color: #343a40; /* Darker background color for hover */
+            background-color: #343a40;
+        }
+        @media (max-width: 600px) {
+            .download-button, .back-button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
         }
     </style>
 </head>
@@ -48,7 +52,7 @@
     <p><strong>Artist:</strong> {{ artist }}</p>
     <div>
         <h3>Album Art:</h3>
-        <img src="{{ url_for('main.download', file_type='album_art', spotify_url=spotify_url) }}" alt="Album Art of {{ title }} by {{ artist }}" loading="lazy">
+        <img src="{{ url_for('main.download', file_type='album_art', spotify_url=spotify_url) }}" alt="Album Art for {{ title }} by {{ artist }}" loading="lazy">
         <br>
         <a class="download-button" href="{{ url_for('main.download', file_type='album_art', spotify_url=spotify_url) }}" download>Download Album Art</a>
     </div>
